fonts, images, vars (colors)

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,4 +2,13 @@
 :root {
   --color-black: #000;
   --color-white: #fff;
+  --color-amethyst: #9d5cd0;
+  --color-amethyst-transparrent: rgba(157, 92, 208, 0.5);
+  --color-dull-gray: #666;
+  --color-signal-black: #333;
+  --color-light-gray: #999;
+  --color-telegrey: #cacaca;
+  --color-smoky-white: #ececec;
+  --color-krayola: #7943a4;
+  --color-violet: #c283f3;
 }
