--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,17 @@
 @import "fonts";
 @import "vendor";
 @import "settings";
+@import "./vendor/swiper-bundle.min.css";
+@import "./components/header";
+@import "./components/hero";
+@import "./components/about";
+@import "./components/gallery";
+@import "./components/catalog";
+@import "./components/events";
+@import "./components/editions";
+@import "./components/projects";
+@import "./components/contacts";
+@import "./components/footer";
 
 // CUSTOM COMPONENTS STYLES
 // .burger {
