--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -11,6 +11,7 @@ html {
 body {
   margin: 0;
   font-family: "OpenSans", sans-serif;
+  font-weight: 400;
   background-color: var(--color-white);
 }
 
@@ -68,10 +69,68 @@ ul {
 
 .container {
   margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1200px;
+  padding: 0 50px;
+  max-width: 1700px;
+
+  @include sm {
+    padding: 0 15px;
+  }
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
+}
+
+.input {
+  outline: none;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+}
+
+.btn {
+  border: 2px solid var(--color-amethyst);
+  border-radius: 100px;
+  padding: 20px 33px;
+  font-weight: 400;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.title {
+  margin: 0 0 20px;
+  padding: 0;
+  font-weight: 400;
+  font-size: 48px;
+  color: var(--color-signal-black);
+}
+
+.text {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-signal-black);
+}
+
+.descr {
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--color-light-gray);
+}
+
+.link {
+  color: var(--color-amethyst);
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.subtitle {
+  margin: 0;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--color-signal-black);
 }
