--- a/src/scss/components/_editions.scss
+++ b/src/scss/components/_editions.scss
@@ -3,20 +3,65 @@
   background-size: cover;
 
   &__container {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding-top: 85px;
     padding-bottom: 80px;
+
+    @include mobile-sm {
+      flex-direction: column;
+    }
+
+    @include xs {
+      padding-top: 52px;
+      padding-bottom: 45px;
+    }
   }
 
   &__left {
-    width: 25%;
+    max-width: 25%;
+
+    @include md {
+      padding-bottom: 110px;
+      max-width: 28%;
+    }
+
+    @include mobile {
+      padding-bottom: 32px;
+    }
+
+    @include mobile-sm {
+      max-width: 100%;
+    }
+
+    @include xs {
+      padding-bottom: 0;
+    }
   }
 
   &__right {
-    overflow: hidden;
+    overflow-x: hidden;
     padding-top: 26px;
-    width: 71.9%;
+    max-width: 71.9%;
+
+    @include md {
+      width: 68%;
+    }
+
+    @include mobile-sm {
+      padding-top: 16px;
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+
+  @include sm {
+    background: url('../img/editions/background-768.jpg') no-repeat center;
+  }
+
+  @include xs {
+    background: url('../img/editions/background-320.jpg') repeat center left;
   }
 }
 
@@ -36,13 +81,82 @@
     font-size: 16px;
     line-height: 32px;
     color: var(--color-white);
+
+    svg {
+      display: none;
+      width: 10px;
+      height: 10px;
+      fill: currentColor;
+      object-fit: cover;
+      transform: rotate(90deg);
+
+      @include xs {
+        display: block;
+      }
+    }
+
+    @include xs {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-top: 1px solid rgba(255, 255, 255, 0.5);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+      padding-top: 4px;
+      padding-bottom: 4px;
+      width: 100%;
+      font-weight: 600;
+    }
   }
 
   &__list {
     margin: 0;
+
+    @include mobile-sm {
+      display: flex;
+      flex-flow: wrap column;
+      height: 150px;
+    }
+
+    @include xs {
+      flex-flow: nowrap column;
+      width: 100%;
+      height: auto;
+    }
   }
 
   &__item {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      right: 0;
+      top: 50%;
+      display: none;
+      border-top: 1px solid var(--color-violet);
+      width: 16px;
+      transform: rotate(-45deg);
+
+      @include xs {
+        display: block;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      top: 50%;
+      display: none;
+      border-top: 1px solid var(--color-violet);
+      width: 16px;
+      transform: rotate(45deg);
+
+      @include xs {
+        display: block;
+      }
+    }
+
     .custom-checkbox {
       &__input {
         &:checked + .custom-checkbox__text {
@@ -89,6 +203,19 @@
         }
       }
     }
+
+    @include mobile-sm {
+      padding-right: 55px;
+    }
+
+    @include xs {
+      border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+      padding-bottom: 5px;
+
+      &:not(.checked) {
+        display: none;
+      }
+    }
   }
 }
 
@@ -100,6 +227,39 @@
     font-size: 16px;
     line-height: 32px;
     color: var(--color-white);
+
+    @include md {
+      margin: 0 15px;
+    }
+
+    @include mobile-sm {
+      margin: 0 0 7px;
+    }
+  }
+
+  @include md {
+    position: absolute;
+    right: 50px;
+    top: 93px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  @include mobile-sm {
+    position: relative;
+    right: auto;
+    top: auto;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  @include mobile-sm {
+    margin-top: 4px;
+  }
+
+  @include xs {
+    margin-top: 20px;
   }
 }
 
@@ -118,10 +278,22 @@
 
     &:first-child {
       padding-left: 8px;
+
+      @include xs {
+        padding-left: 0;
+      }
     }
 
     &:last-child {
       padding-right: 13px;
+
+      @include xs {
+        padding-right: 0;
+      }
+    }
+
+    @include xs {
+      padding: 9px;
     }
   }
 
@@ -136,20 +308,96 @@
     &::placeholder {
       color: var(--color-white);
     }
+
+    @include xs {
+      width: 70px;
+    }
   }
 }
 
 .editions-slider {
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  height: 100%;
+
+  .pagination-block {
+    &__button-prev {
+      @include sm {
+        left: -26px;
+      }
+    }
+
+    &__button-next {
+      @include sm {
+        right: 26px;
+      }
+    }
+
+    &__pagination {
+      @include sm {
+        left: -26px;
+      }
+    }
+
+    @include xs {
+      display: none;
+    }
+  }
+
+  &__wrapper {
+    @include xs {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  &__slide {
+    width: 100%;
+    height: 100%;
+
+    @include xs {
+      width: 44.8%;
+
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 50px;
+      }
+    }
+  }
+
+  &__img {
+    height: auto;
+    max-width: 100%;
+  }
+
   &__content {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     padding-top: 21px;
     padding-bottom: 14px;
+    max-width: 350px;
+
+    @include md {
+      padding-top: 11px;
+    }
+
+    @include xs {
+      flex-direction: column;
+      padding-top: 9px;
+    }
   }
 
   &__text-block {
     width: 65%;
+
+    @include xs {
+      width: 100%;
+    }
   }
 
   &__name {
@@ -161,6 +409,11 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     color: var(--color-white);
+
+    @include xs {
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 
   &__author {
@@ -171,16 +424,44 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     color: var(--color-white);
+
+    @include xs {
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 
   &__price {
     font-style: italic;
     font-size: 16px;
     color: var(--color-white);
+
+    @include xs {
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 
   &__btn {
     padding: 8px 20px;
     color: var(--color-white);
+
+    @include xs {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 10px 37px;
+      font-size: 12px;
+    }
+  }
+
+  @include sm {
+    padding-right: 26px;
+    padding-left: 26px;
+  }
+
+  @include xs {
+    padding-right: 0;
+    padding-left: 0;
   }
 }
