--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -22,6 +22,18 @@
   }
 }
 
+@mixin mobile {
+  @media (max-width: (1024px)) {
+    @content;
+  }
+}
+
+@mixin mobile-sm {
+  @media (max-width: (992px)) {
+    @content;
+  }
+}
+
 @mixin sm {
   @media (max-width: (768px)) {
     @content;
@@ -30,12 +42,6 @@
 
 @mixin xs {
   @media (max-width: (576px)) {
-    @content;
-  }
-}
-
-@mixin mobile {
-  @media (max-width: (1024px)) {
     @content;
   }
 }
