usability (hover, focus, active), accessibility, scripts

--- a/src/scss/_vendor.scss
+++ b/src/scss/_vendor.scss
@@ -1,3 +1,4 @@
 @import "./vendor/normalize";
-
-// @import "./vendor/simple-grid";
+@import "./vendor/swiper-bundle.min.css";
+@import "./vendor/justValidateTooltip.min.css";
+@import "../../node_modules/simplebar/dist/simplebar.min.css";
