--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -20,7 +21,20 @@ img {
 }
 
 a {
+  outline: none;
   text-decoration: none;
+
+  &:focus {
+    @include focus;
+  }
+
+  &:hover {
+    @include hover;
+  }
+
+  &:active {
+    @include active;
+  }
 }
 
 ul {
@@ -89,12 +103,25 @@ ul {
 }
 
 .btn {
+  outline: none;
   border: 2px solid var(--color-amethyst);
   border-radius: 100px;
   padding: 20px 33px;
   font-weight: 400;
   font-size: 18px;
   cursor: pointer;
+
+  &:focus {
+    @include focusBtn;
+  }
+
+  &:hover {
+    @include hoverBtn;
+  }
+
+  &:active {
+    @include activeBtn;
+  }
 
   @include xs {
     padding: 10px 15px;
@@ -161,15 +188,28 @@ ul {
     position: absolute;
     right: 0;
     z-index: 100;
+    border: 2px solid var(--color-dull-gray);
     border-radius: 50%;
     padding: 10px;
-    width: 30px;
-    height: 30px;
+    width: 28px;
+    height: 28px;
     background-color: var(--color-dull-gray);
 
     &::after {
       font-size: inherit;
       color: var(--color-white);
+    }
+
+    &:focus {
+      @include sliderBtnFocus;
+    }
+
+    &:hover {
+      @include sliderBtnHover;
+    }
+
+    &:active {
+      @include sliderBtnActive;
     }
   }
 
@@ -180,5 +220,15 @@ ul {
   @include xs {
     margin-right: auto;
     margin-left: auto;
+  }
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
