--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -59,9 +59,6 @@
     position: relative;
     width: 46px;
     height: 46px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    cursor: pointer;
 
     &:not(:last-child) {
       margin-right: 50px;
@@ -75,8 +72,73 @@
       }
     }
 
+    &--active {
+      &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        border: 2px solid var(--color-amethyst);
+        border-radius: 50%;
+        width: 66px;
+        height: 66px;
+        opacity: 0;
+        transform: translate(-50%, -50%);
+        transition: 0.5s;
+        animation: show 0.5s 1;
+        animation-delay: 0.1s;
+        animation-fill-mode: forwards;
+
+        @include xs {
+          width: 44px;
+          height: 44px;
+        }
+      }
+    }
+
+    &:hover {
+      @include exclude-xs {
+        filter: drop-shadow(0 0 20px rgba(157, 92, 208, 0.7));
+        transition: filter 0.3s;
+      }
+    }
+
+    &:active {
+      &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        border: 2px solid var(--color-krayola);
+        border-radius: 50%;
+        width: 46px;
+        height: 46px;
+        transform: translate(-50%, -50%);
+
+        @include xs {
+          width: 32px;
+          height: 32px;
+        }
+      }
+    }
+
+    @include xs {
+      margin-bottom: 4px;
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  &__link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+
     &--france {
-      background-image: url('../img/catalog/france.png');
+      background-image: url("../img/catalog/france.png");
     }
 
     &--germany {
@@ -94,31 +156,6 @@
     &--belgium {
       background-image: url('../img/catalog/belgium.png');
     }
-
-    &--active {
-      &::before {
-        content: "";
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        border: 2px solid var(--color-amethyst);
-        border-radius: 50%;
-        width: 66px;
-        height: 66px;
-        transform: translate(-50%, -50%);
-
-        @include xs {
-          width: 44px;
-          height: 44px;
-        }
-      }
-    }
-
-    @include xs {
-      margin-bottom: 4px;
-      width: 32px;
-      height: 32px;
-    }
   }
 }
 
@@ -128,18 +165,18 @@
   justify-content: space-between;
 
   &__left {
-    width: 47%;
+    width: 46.9%;
 
     @include lg {
       width: 40%;
     }
 
     @include mobile {
-      width: 47%;
+      width: 47.3%;
     }
 
     @include mobile-sm {
-      padding-top: 51px;
+      padding-top: 50px;
       width: 100%;
     }
   }
@@ -166,20 +203,38 @@
 }
 
 .painter {
+  display: none;
+
+  &__img {
+    width: 100%;
+    max-height: 600px;
+    object-fit: cover;
+  }
+
   &__name {
-    margin: 23px 0 5px;
+    margin: 24px 0 0;
 
     @include xs {
       margin-top: 10px;
+      margin-bottom: 9px;
     }
   }
 
   &__text {
-    margin-top: 2px;
+    margin-top: 5px;
 
     @include xs {
-      margin-top: 9px;
+      margin-top: 6px;
     }
+  }
+
+  &--active {
+    display: block;
+    opacity: 0;
+    transition: 0.5s;
+    animation: show 1s 1;
+    animation-delay: 0.1s;
+    animation-fill-mode: forwards;
   }
 }
 
@@ -189,9 +244,11 @@
     align-items: center;
     justify-content: space-between;
     margin: 0;
+    outline: none;
     border-bottom: 1px solid var(--color-telegrey);
     padding-top: 30px;
     padding-bottom: 33px;
+    cursor: pointer;
 
     span {
       position: relative;
@@ -207,8 +264,8 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        width: 15px;
-        height: 15px;
+        width: 16px;
+        height: 16px;
         fill: var(--color-black);
         transform: translate(-50%, -50%);
 
@@ -224,6 +281,44 @@
       }
     }
 
+    &:focus {
+      .accordion__subtitle {
+        @include focus;
+      }
+
+      span {
+        @include sliderBtnFocus;
+      }
+    }
+
+    &:hover {
+      .accordion__subtitle {
+        @include hover;
+      }
+
+      @include exclude-xs {
+        span {
+          @include sliderBtnHover;
+
+          svg {
+            fill: var(--color-white);
+          }
+        }
+      }
+    }
+
+    &:active {
+      span {
+        @include sliderBtnActive;
+
+        @include xs {
+          svg {
+            fill: var(--color-white);
+          }
+        }
+      }
+    }
+
     &:first-child {
       border-top: 1px solid var(--color-telegrey);
     }
@@ -231,6 +326,11 @@
     @include xs {
       padding-top: 20px;
       padding-bottom: 21px;
+    }
+  }
+
+  &__subtitle {
+    @include xs {
       font-size: 18px;
     }
   }
@@ -240,7 +340,7 @@
     padding-bottom: 28px;
 
     @include mobile {
-      padding-bottom: 3px;
+      padding-bottom: 5px;
     }
 
     @include mobile-sm {
@@ -254,11 +354,20 @@
   }
 
   &__list {
-    display: flex;
+    display: none;
     flex-flow: wrap;
     flex-direction: column;
     align-items: flex-start;
     margin: 0;
+
+    &--active {
+      display: flex;
+      opacity: 0;
+      transition: 0.5s;
+      animation: show 1s 1;
+      animation-delay: 0.1s;
+      animation-fill-mode: forwards;
+    }
   }
 
   &__item {
@@ -279,6 +388,20 @@
 
   &__link {
     color: var(--color-signal-black);
+
+    &:hover {
+      @include exclude-xs {
+        text-decoration: underline;
+        color: var(--color-amethyst);
+      }
+    }
+
+    &:active {
+      @include xs {
+        text-decoration: none;
+        color: var(--color-krayola);
+      }
+    }
 
     &--active {
       color: var(--color-amethyst);
