--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -1,6 +1,5 @@
 .contacts {
   padding-top: 7px;
-  padding-bottom: 5px;
 
   &__container {
     overflow: hidden;
@@ -53,12 +52,14 @@
 }
 
 .contacts-left {
+  display: flex;
+  flex-direction: column;
   border-right: 1px solid var(--color-telegrey);
   padding-top: 120px;
-  padding-bottom: 120px;
+  height: 700px;
 
   &__address-title {
-    margin-bottom: 4px;
+    margin-bottom: -5px;
 
     @include xs {
       margin-bottom: 0;
@@ -68,7 +69,8 @@
   }
 
   &__address {
-    margin-bottom: 29px;
+    margin-bottom: 22px;
+    font-style: normal;
 
     @include xs {
       margin-bottom: 336px;
@@ -89,7 +91,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 6px;
+    margin-top: 2px;
 
     input {
       margin-top: 10px;
@@ -98,21 +100,21 @@
       border: 1px solid var(--color-signal-black);
       border-radius: 100px;
       padding: 10px 20px;
-      width: 77%;
+      width: 100%;
 
       &::placeholder {
         font-size: 16px;
         color: var(--color-light-gray);
       }
 
-      @include mobile-sm {
-        width: 88%;
-      }
-
       @include xs {
-        width: 100%;
         margin-bottom: 10px;
+        width: 100%;
       }
+    }
+
+    @include xs {
+      margin-top: 6px;
     }
   }
 
@@ -130,7 +132,7 @@
   }
 
   &__social-title {
-    margin-top: 37px;
+    margin-top: 33px;
     font-weight: 400;
 
     @include xs {
@@ -143,7 +145,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 14px;
+    margin-top: 9px;
 
     @include xs {
       margin-top: 7px;
@@ -171,7 +173,7 @@
   @include xs {
     border-right: none;
     padding-top: 0;
-    padding-bottom: 35px;
+    height: 746px;
   }
 }
 
@@ -203,5 +205,31 @@
 
   @include xs {
     position: unset;
+  }
+}
+
+// noinspection Stylelint
+.js-validate-error-label {
+  left: 0;
+  top: -10px;
+  font-size: 12px;
+  color: #ff5c00 !important;
+  background: none;
+}
+
+// noinspection Stylelint
+.js-validate-error-field {
+  border-color: #ff5c00 !important;
+}
+
+.just-validate-tooltip-container {
+  width: 77%;
+
+  @include mobile-sm {
+    width: 88%;
+  }
+
+  @include xs {
+    width: 100%;
   }
 }
