--- a/src/scss/components/_events.scss
+++ b/src/scss/components/_events.scss
@@ -4,7 +4,7 @@
     padding-bottom: 81px;
 
     @include mobile-sm {
-      padding-bottom: 83px;
+      padding-bottom: 85px;
     }
 
     @include xs {
@@ -13,6 +13,8 @@
   }
 
   &__title {
+    margin-bottom: 4px;
+
     @include xs {
       margin-bottom: 0;
     }
@@ -56,7 +58,11 @@
   margin-bottom: 34px;
   width: 31.2%;
   height: 100%;
-  max-height: 700px;
+  opacity: 0;
+  transition: 0.5s;
+  animation: show 1s 1;
+  animation-delay: 0.1s;
+  animation-fill-mode: forwards;
 
   &:not(:nth-child(-n + 3)) {
     margin-bottom: 0;
@@ -93,13 +99,13 @@
     align-items: flex-start;
     justify-content: space-between;
     padding: 4px 42px 48px 50px;
-    height: 353px;
+    height: 301px;
 
     @include md {
       padding-right: 29px;
       padding-bottom: 60px;
       padding-left: 34px;
-      height: 437px;
+      height: 371px;
 
       &:not(:nth-child(-n + 2)) {
         margin-bottom: 0;
@@ -126,6 +132,21 @@
     padding-bottom: 3px;
     font-size: 16px;
     color: var(--color-amethyst);
+
+    &:hover {
+      @include exclude-xs {
+        font-weight: 600;
+        color: var(--color-amethyst);
+      }
+    }
+
+    &:active {
+      @include active;
+
+      @include xs {
+        font-weight: 600;
+      }
+    }
   }
 
   &__place,
@@ -157,6 +178,14 @@
   &__top {
     overflow: hidden;
     margin-bottom: 20px;
+
+    @include mobile-sm {
+      margin-bottom: 55px;
+    }
+
+    @include xs {
+      margin-bottom: 20px;
+    }
   }
 }
 
@@ -165,7 +194,6 @@
   margin-left: auto;
   width: 100%;
   height: 100%;
-  max-height: 830px;
 
   &__pagination {
     display: none;
