--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -16,7 +16,7 @@
 
     @include xs {
       padding-top: 52px;
-      padding-bottom: 211px;
+      padding-bottom: 215px;
     }
   }
 
@@ -104,6 +104,7 @@
 .gallery-select {
   position: relative;
   width: 100%;
+  cursor: pointer;
   user-select: none;
 
   &__top {
@@ -123,6 +124,18 @@
       fill: currentColor;
       transform: rotate(90deg);
     }
+
+    &:focus {
+      @include focus;
+    }
+
+    &:hover {
+      @include hover;
+    }
+
+    &:active {
+      @include active;
+    }
   }
 
   &__dropdown {
@@ -133,6 +146,7 @@
   }
 
   &__list {
+    display: none;
     border: 1px solid var(--color-light-gray);
     border-radius: 6px;
   }
@@ -144,6 +158,33 @@
 
     &:not(:last-child) {
       border-bottom: 1px solid var(--color-light-gray);
+    }
+
+    &:focus {
+      @include focus;
+    }
+
+    &:hover {
+      @include hover;
+    }
+
+    &:active {
+      @include active;
+    }
+  }
+
+  &--showed .gallery-select__list {
+    display: block;
+    opacity: 0;
+    transition: 0.5s;
+    animation: show 0.5s 1;
+    animation-delay: 0.1s;
+    animation-fill-mode: forwards;
+  }
+
+  &--showed .gallery-select__top {
+    svg {
+      transform: rotate(-90deg);
     }
   }
 }
@@ -183,18 +224,94 @@
   margin-left: auto;
   width: 100%;
   height: 100%;
-  max-height: 810px;
+  max-height: 811px;
 
   &__slide {
-    overflow: hidden;
     width: 100%;
     height: 100%;
     max-width: 350px;
     max-height: 350px;
+    cursor: pointer;
 
-    img {
-      height: auto;
-      max-width: 100%;
+    div {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-width: 350px;
+      max-height: 350px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 80%;
+        height: 80%;
+        background: url("../img/gallery/hover.png") no-repeat center;
+        object-fit: cover;
+        opacity: 0;
+        transform: translate(-50%, -50%);
+        transition: opacity 0.3s;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(194, 131, 243, 0.4);
+        background-blend-mode: multiply;
+        opacity: 0;
+        transform: translate(-50%, -50%);
+        transition: opacity 0.1s;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        @include xs {
+          height: 367px;
+        }
+      }
+
+      &:focus {
+        outline: 3px solid var(--color-krayola);
+        outline-offset: -3px;
+      }
+
+      &:hover {
+        @include exclude-xs {
+          &::before {
+            opacity: 1;
+            transition: opacity 0.3s;
+          }
+        }
+      }
+
+      &:active {
+        @include xs {
+          outline: 3px solid var(--color-purple);
+          outline-offset: -3px;
+
+          &::before {
+            opacity: 1;
+          }
+
+          &::after {
+            opacity: 1;
+          }
+        }
+      }
+
+      @include xs {
+        max-width: 100%;
+        max-height: 367px;
+        text-align: center;
+      }
     }
 
     @include mobile {
@@ -204,10 +321,12 @@
 
     @include mobile-sm {
       max-width: 350px;
+      max-height: 280px;
     }
 
     @include sm {
       max-width: 317px;
+      max-height: 280px;
     }
 
     @include xs {
