--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   position: relative;
+  overflow: hidden;
 
   &__img {
     position: absolute;
@@ -9,20 +10,22 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    animation: 20s scale infinite linear;
   }
 
   &__container {
     padding-top: 232px;
-    padding-bottom: 123px;
+    padding-bottom: 121px;
 
     @include md {
       padding-top: 208px;
-      padding-bottom: 115px;
+      padding-bottom: 113px;
     }
 
     @include xs {
       padding-top: 78px;
-      padding-bottom: 45px;
+      padding-bottom: 43px;
+      text-align: center;
     }
   }
 
@@ -50,7 +53,6 @@
       font-size: 32px;
       line-height: 38px;
       letter-spacing: unset;
-      text-align: center;
     }
   }
 
@@ -77,12 +79,12 @@
       font-size: 12px;
       line-height: 16px;
       letter-spacing: normal;
-      text-align: center;
     }
   }
 
   &__btn {
-    display: block;
+    display: inline-block;
+    border-width: 3px;
     font-weight: 600;
     font-size: 18px;
     line-height: 25px;
@@ -90,10 +92,42 @@
     color: var(--color-white);
     background-color: var(--color-amethyst);
 
+    &:focus {
+      outline: none;
+      border-color: var(--color-krayola);
+      color: var(--color-white);
+    }
+
+    &:hover {
+      @include exclude-xs {
+        border-color: #d1a9f0;
+        color: var(--color-white);
+      }
+    }
+
+    &:active {
+      @include xs {
+        background-color: var(--color-krayola);
+      }
+    }
+
     @include xs {
-      margin: 0 auto;
       font-size: 12px;
       line-height: 16px;
     }
+  }
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(0, 0.0, 0);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(0, 0.0, 0);
   }
 }
