--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -7,14 +7,18 @@
       padding-bottom: 70px;
     }
 
+    @include mobile-sm {
+      margin-bottom: -13px;
+    }
+
     @include xs {
       padding-top: 53px;
-      padding-bottom: 33px;
+      padding-bottom: 46px;
     }
   }
 
   &__text {
-    margin-bottom: 21px;
+    margin-bottom: 16px;
     max-width: 65.7%;
 
     span {
@@ -47,6 +51,7 @@
         position: absolute;
         left: 50%;
         bottom: 200%;
+        z-index: -1;
         padding: 10px;
         width: 264px;
         font-weight: 600;
@@ -83,6 +88,7 @@
         }
 
         &::after {
+          z-index: 0;
           opacity: 1;
           transition: opacity 0.3s;
         }
@@ -108,10 +114,10 @@
   }
 
   &__subtitle {
-    margin: 0 0 22px;
+    margin: 0 0 17px;
 
     @include mobile {
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     @include xs {
@@ -232,6 +238,12 @@
   &__prev-btn,
   &__next-btn {
     top: 55%;
+    border-color: var(--color-smoky-white);
+    background-color: var(--color-smoky-white);
+
+    &::after {
+      color: var(--color-black);
+    }
   }
 
   @include xs {
