--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -23,6 +23,7 @@ img {
 a {
   outline: none;
   text-decoration: none;
+  transition: color 0.3s;
 
   &:focus {
     @include focus;
@@ -39,6 +40,7 @@ a {
 
 ul {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
@@ -109,7 +111,12 @@ ul {
   padding: 20px 33px;
   font-weight: 400;
   font-size: 18px;
+  transition: background-color 0.3s;
   cursor: pointer;
+
+  span {
+    transition: color 0.3s;
+  }
 
   &:focus {
     @include focusBtn;
@@ -173,8 +180,7 @@ ul {
 
 .pagination-block {
   position: relative;
-  margin-top: 10px;
-  margin-bottom: 22px;
+  margin: 10px 0 22px 2px;
   width: 130px;
   height: 30px;
 
@@ -191,13 +197,15 @@ ul {
     border: 2px solid var(--color-dull-gray);
     border-radius: 50%;
     padding: 10px;
-    width: 28px;
-    height: 28px;
+    width: 30px;
+    height: 30px;
     background-color: var(--color-dull-gray);
+    transition: border-color 0.3s, background-color 0.3s;
 
     &::after {
-      font-size: inherit;
+      font-size: 10px;
       color: var(--color-white);
+      transition: color 0.3s;
     }
 
     &:focus {
@@ -221,6 +229,11 @@ ul {
     margin-right: auto;
     margin-left: auto;
   }
+}
+
+.swiper-button-prev.swiper-button-disabled,
+.swiper-button-next.swiper-button-disabled {
+  opacity: 1;
 }
 
 @keyframes show {
