--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -16,19 +16,19 @@
 .catalog-top {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-start;
 
   &__title {
-    margin-top: 11px;
-    margin-right: 39px;
+    margin: 11px 39px 0 0;
 
     @include xs {
-      margin-bottom: -3px;
+      margin-bottom: 13px;
     }
   }
 
   &__text {
+    margin-top: 20px;
     margin-bottom: 40px;
     width: 100%;
     max-width: 1100px;
@@ -49,6 +49,8 @@
 }
 
 .flags {
+  margin-top: 15px;
+
   &__list {
     display: flex;
     align-items: center;
@@ -59,6 +61,7 @@
     position: relative;
     width: 46px;
     height: 46px;
+    transition: filter 0.3s;
 
     &:not(:last-child) {
       margin-right: 50px;
@@ -99,7 +102,6 @@
     &:hover {
       @include exclude-xs {
         filter: drop-shadow(0 0 20px rgba(157, 92, 208, 0.7));
-        transition: filter 0.3s;
       }
     }
 
@@ -156,6 +158,11 @@
     &--belgium {
       background-image: url('../img/catalog/belgium.png');
     }
+  }
+
+  @include xs {
+    margin-top: 0;
+    margin-bottom: 16px;
   }
 }
 
@@ -258,7 +265,7 @@
       height: 50px;
       background-color: var(--color-smoky-white);
       transform: rotate(90deg);
-      transition: 0.3s transform;
+      transition: transform 0.3s, background-color 0.3s, border-color 0.3s;
 
       svg {
         position: absolute;
@@ -268,6 +275,7 @@
         height: 16px;
         fill: var(--color-black);
         transform: translate(-50%, -50%);
+        transition: fill 0.3s;
 
         @include xs {
           width: 11px;
@@ -330,6 +338,8 @@
   }
 
   &__subtitle {
+    transition: color 0.3s;
+
     @include xs {
       font-size: 18px;
     }
@@ -414,7 +424,6 @@
 
   .ui-state-active > span {
     transform: rotate(270deg);
-    transition: 0.3s transform;
   }
 
   .ui-accordion-content-active {
