--- a/src/scss/components/_events.scss
+++ b/src/scss/components/_events.scss
@@ -13,10 +13,10 @@
   }
 
   &__title {
-    margin-bottom: 4px;
+    margin-bottom: 18px;
 
     @include xs {
-      margin-bottom: 0;
+      margin-bottom: 15px;
     }
   }
 
@@ -37,6 +37,7 @@
 
     @include xs {
       flex-wrap: initial;
+      margin-bottom: 17px;
     }
   }
 
@@ -55,7 +56,7 @@
 }
 
 .event {
-  margin-bottom: 34px;
+  margin-bottom: 53px;
   width: 31.2%;
   height: 100%;
   opacity: 0;
@@ -132,6 +133,7 @@
     padding-bottom: 3px;
     font-size: 16px;
     color: var(--color-amethyst);
+    transition: font-weight 0.3s, color 0.3s;
 
     &:hover {
       @include exclude-xs {
