--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -84,11 +84,16 @@
     max-width: 350px;
     font-size: 16px;
     line-height: 32px;
+    letter-spacing: 0.4px;
     color: var(--color-white);
 
     @include mobile-sm {
       max-width: 670px;
     }
+  }
+
+  &__link {
+    color: var(--color-violet);
   }
 
   @include mobile {
@@ -116,6 +121,7 @@
     padding: 10px 15px;
     font-size: 16px;
     color: var(--color-white);
+    transition: color 0.3s;
 
     svg {
       display: block;
@@ -141,7 +147,7 @@
   &__dropdown {
     position: absolute;
     left: 0;
-    top: 24px;
+    top: 40px;
     width: 100%;
   }
 
@@ -152,7 +158,7 @@
   }
 
   &__item {
-    padding: 10px 15px;
+    padding: 10px 19px;
     font-size: 16px;
     color: var(--color-light-gray);
 
@@ -287,7 +293,6 @@
         @include exclude-xs {
           &::before {
             opacity: 1;
-            transition: opacity 0.3s;
           }
         }
       }
