--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,18 +23,40 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 100px;
+    padding-top: 29px;
+    padding-bottom: 29px;
 
     @include md {
       justify-content: flex-start;
+      padding-top: 37px;
+      padding-bottom: 35px;
     }
 
     @include xs {
-      height: 45px;
+      padding-top: 15px;
+      padding-bottom: 15px;
     }
   }
 
   &__logo {
+    margin-right: 179px;
+
+    img {
+      min-width: 173px;
+
+      @include md {
+        min-width: 187px;
+      }
+
+      @include xs {
+        min-width: 97px;
+      }
+    }
+
+    @include lg {
+      margin-right: 100px;
+    }
+
     @include md {
       position: absolute;
       left: 50%;
@@ -43,38 +65,17 @@
   }
 }
 
-.logo {
-  img {
-    width: 173px;
-
-    @include md {
-      width: 187px;
-    }
-
-    @include xs {
-      width: 97px;
-    }
-  }
-}
-
 .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 
   &__list {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 280px;
-
-    @include lg-max {
-      margin-right: 150px;
-    }
-
-    @include lg {
-      margin-right: 70px;
-    }
+    margin-right: auto;
 
     @include md {
       flex-direction: column;
@@ -121,6 +122,7 @@
     font-weight: 400;
     font-size: 18px;
     color: var(--color-white);
+    transition: color 0.3s;
 
     svg {
       width: 13px;
@@ -242,6 +244,7 @@
     font-size: 18px;
     line-height: 25px;
     color: var(--color-white);
+    transition: color 0.3s;
     cursor: pointer;
 
     svg {
@@ -252,6 +255,7 @@
       fill: currentColor;
       object-fit: cover;
       transform: rotate(90deg);
+      transition: fill 0.3s;
     }
 
     &:focus {
@@ -269,16 +273,16 @@
 
   &__dropdown {
     position: absolute;
-    left: -10px;
-    top: 15px;
-    z-index: 20;
-    padding: 10px;
-    width: 220px;
+    left: -40px;
+    top: 46px;
+    display: none;
+    padding: 40px 20px 40px 40px;
+    background: rgba(0, 0, 0, 0.4);
+    opacity: 0;
   }
 
   &__list {
-    display: none;
-    width: 100%;
+    width: 240px;
     height: 220px;
   }
 
@@ -294,7 +298,7 @@
     cursor: pointer;
 
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 21px;
     }
 
     &:hover {
@@ -314,9 +318,8 @@
     }
   }
 
-  &--showed .header-select__list {
+  &--showed .header-select__dropdown {
     display: block;
-    opacity: 0;
     transition: 0.5s;
     animation: show 0.5s 1;
     animation-delay: 0.1s;
@@ -336,14 +339,7 @@
     align-items: center;
     justify-content: space-between;
     color: var(--color-white);
-
-    svg {
-      display: block;
-      margin-right: 9px;
-      width: 22px;
-      height: 22px;
-      fill: currentColor;
-    }
+    transition: color 0.3s;
 
     input {
       border-bottom: 1px solid rgba(255, 255, 255, 0.85);
@@ -388,17 +384,18 @@
     }
   }
 
-  &:focus-within {
-    outline: 2px solid var(--color-krayola);
-  }
+  &__btn {
+    color: currentColor;
 
-  &--mobile {
-    position: absolute;
-    right: 50px;
-    display: none;
-    transition: right 0.3s;
+    svg {
+      display: block;
+      margin-right: 4px;
+      width: 22px;
+      height: 22px;
+      fill: currentColor;
+    }
 
-    label {
+    &--mobile {
       svg {
         margin-right: 0;
         width: 29px;
@@ -410,10 +407,21 @@
         }
       }
     }
+  }
+
+  &:focus-within {
+    outline: 2px solid var(--color-krayola);
+  }
+
+  &--mobile {
+    position: absolute;
+    right: 44px;
+    display: none;
+    transition: right 0.3s;
 
     input {
       position: absolute;
-      left: 35px;
+      left: 45px;
       display: none;
       opacity: 0;
       transition: opacity 0.3s;
@@ -428,7 +436,7 @@
     }
 
     @include xs {
-      right: 15px;
+      right: 9px;
     }
   }
 
