--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,15 +2,25 @@
   position: relative;
   overflow: hidden;
 
-  &__img {
+  &__background {
     position: absolute;
     left: 0;
     top: 0;
     z-index: -1;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-image: url("../img/hero/hero-1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     animation: 20s scale infinite linear;
+
+    @include mobile {
+      background-image: url("../img/hero/hero-1-1024.jpg");
+    }
+
+    @include sm {
+      background-image: url("../img/hero/hero-1-768.jpg");
+    }
   }
 
   &__container {
@@ -34,6 +44,7 @@
     padding: 5px 0 0;
     width: 100%;
     max-width: 570px;
+    font-weight: 600;
     font-size: 72px;
     line-height: 85px;
     letter-spacing: 1.9px;
@@ -91,6 +102,7 @@
     letter-spacing: 0.4px;
     color: var(--color-white);
     background-color: var(--color-amethyst);
+    transition: border-color 0.3s, color 0.3s;
 
     &:focus {
       outline: none;
