--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -80,22 +80,18 @@
 
       &:hover {
         background-color: var(--color-amethyst);
-        transition: background-color 0.3s;
 
         &::before {
           opacity: 1;
-          transition: opacity 0.3s;
         }
 
         &::after {
           z-index: 0;
           opacity: 1;
-          transition: opacity 0.3s;
         }
 
         svg {
           fill: var(--color-white);
-          transition: fill 0.3s;
         }
       }
     }
@@ -161,6 +157,7 @@
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
+    transition: background-image 0.3s;
 
     &--1 {
       background-image: url('../img/projects/freelands.jpg');
