--- a/src/scss/components/_events.scss
+++ b/src/scss/components/_events.scss
@@ -4,7 +4,7 @@
     padding-bottom: 81px;
 
     @include mobile-sm {
-      padding-bottom: 85px;
+      padding-bottom: 82px;
     }
 
     @include xs {
@@ -14,6 +14,10 @@
 
   &__title {
     margin-bottom: 18px;
+
+    @include mobile-sm {
+      margin-bottom: 21px;
+    }
 
     @include xs {
       margin-bottom: 15px;
@@ -151,19 +155,23 @@
     }
   }
 
+  &:nth-child(n + 4) {
+    display: none;
+  }
+
   &__place,
   &__date {
     display: block;
     text-align: right;
   }
 
-  &--hidden {
-    display: none;
-  }
-
   @include mobile-sm {
     width: 49%;
     max-width: 317px;
+
+    &:nth-child(n + 3) {
+      display: none;
+    }
   }
 
   @include xs {
